--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "chain-registry": "1.25.4",
     "cosmos-kit": "2.8.6",
     "framer-motion": "9.0.7",
+    "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
     "next": "^13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
